--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,5 +3,6 @@ services:
   k8sdashboard:
     image: k8sdashboard
     container_name: k8s_dashboard
+    restart: always
     ports:
       - "5000:5000"
